<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Event_view" >

    <Button
        android:id="@+id/event_view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="18dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/event_view_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_view_back"
        android:layout_alignBottom="@+id/event_view_back"
        android:layout_centerHorizontal="true"
        android:text="@string/edit" />

    <Button
        android:id="@+id/event_view_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/event_view_edit"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/event_view_edit"
        android:text="@string/del" />

    <TextView
        android:id="@+id/event_view_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/eventname" />

    <TextView
        android:id="@+id/event_view_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_view_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/eventdescr" />

</RelativeLayout>