<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Editattend" >

    <TextView
        android:id="@+id/event_main_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="20dp"
        android:text="@string/t3pm4pm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/event_main_heading"
        android:layout_alignLeft="@+id/event_main_heading"
        android:layout_marginBottom="35dp"
        android:text="@string/t2pm3pm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_centerVertical="true"
        android:text="@string/t1pm2pm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView04"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_marginBottom="34dp"
        android:text="@string/t11am12pm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView03"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_marginBottom="44dp"
        android:text="@string/t10am11am"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_marginBottom="35dp"
        android:text="@string/t9am10am"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/yes6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView05"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/event_main_heading" 
        />

    <CheckBox
        android:id="@+id/yes5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yes6"
        android:layout_alignTop="@+id/TextView05" 
        />

    <CheckBox
        android:id="@+id/yes4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yes5"
        android:layout_alignTop="@+id/TextView04" 
        />

    <CheckBox
        android:id="@+id/yes3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yes4"
        android:layout_alignTop="@+id/TextView03"
         />

    <CheckBox
        android:id="@+id/yes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yes3"
        android:layout_alignTop="@+id/TextView02"
         />

    <CheckBox
        android:id="@+id/yes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yes2"
        android:layout_alignTop="@+id/TextView06" 
         />

    <Button
        android:id="@+id/saveatt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yes6"
        android:layout_alignRight="@+id/att6"
        android:layout_below="@+id/yes6"
        android:layout_marginTop="19dp"
        android:text="@string/save" />

    <CheckBox
        android:id="@+id/att2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/att1"
        android:layout_alignTop="@+id/yes2"
        />

    <CheckBox
        android:id="@+id/att3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/yes3"
        android:layout_alignLeft="@+id/att2"
        android:layout_below="@+id/TextView02"
         />

    <CheckBox
        android:id="@+id/att4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yes4"
        android:layout_alignBottom="@+id/yes4"
        android:layout_alignParentRight="true"
         />

    <CheckBox
        android:id="@+id/att5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yes5"
        android:layout_alignBottom="@+id/yes5"
        android:layout_alignParentRight="true" 
       />

    <CheckBox
        android:id="@+id/att6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveatt"
        android:layout_alignParentRight="true"
        />

    <CheckBox
        android:id="@+id/att1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yes1"
        android:layout_alignBottom="@+id/yes1"
        android:layout_alignRight="@+id/att4"
         />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_main_heading"
        android:layout_alignTop="@+id/saveatt"
        android:text="Today is:" />

    <TextView
        android:id="@+id/attend_edit_showdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveatt"
        android:layout_alignBottom="@+id/saveatt"
        android:layout_alignRight="@+id/TextView06"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/TextView02"
        android:text="Class Taken" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/att1"
        android:text="Attended" />

</RelativeLayout>